--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "https://sustuseumr.github.io/vietnam/"
 languageCode = "en-us"
 title = "Vietnam Test"
 theme = "hugo-lithium-theme"
-googleAnalytics = ""
+googleAnalytics = "UA-134609366-1"
 disqusShortname = ""
 publishDir = "docs"
 
