--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ baseurl = "https://sustuseumr.github.io/vietnam/"
 languageCode = "en-us"
 title = "Vietnam Test"
 theme = "hugo-lithium-theme"
+googleAnalytics = "UA-134609366-1"
 disqusShortname = ""
 publishDir = "docs"
 
